Modernize Java: switch expressions, boxing, isEmpty(), List.of(), thread-safety
- Fix UriDecoder thread-safety: replace static mutable formEncoding with
  local detection in Parser
- Replace JUL logger with System.Logger in DebugResponseHelperImpl
- Convert 25 switch statements to switch expressions across 12 files
- Modernize 80+ remaining instanceof to pattern matching in 20 files
- Fix 16 unnecessary boxing (Integer.valueOf → parseInt, etc.)
- Replace 35+ .length() > 0 checks with !isEmpty()
- Convert 200+ Arrays.asList to List.of/Set.of across 59 files
- Fix modifier ordering (final private → private final) in 4 files
- Add private constructors to 5 utility handler classes
- Improve 35 test assertions (assertEquals(true/false/null) → specific)
- Replace Calendar.getInstance() with java.time in tecsvc data
- Replace Double.valueOf(x).hashCode() with Double.hashCode(x) in Point

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>