@@ -15,6 +15,8 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Replaced Arrays.asList with List.of/Set.of
  */
 package org.sitenetsoft.olinguito.server.core.edm.provider;
 
@@ -28,7 +30,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.sitenetsoft.olinguito.commons.api.edm.Edm;
@@ -245,7 +246,7 @@ public class EdmTermImplTest {
     FullQualifiedName csdlTerm1Name = new FullQualifiedName("namespace", "name1");
     csdlTerm.setName(csdlTerm1Name.getName());
     csdlTerm.setType("Edm.String");
-    csdlTerm.setAppliesTo(Arrays.asList("Invalid"));
+    csdlTerm.setAppliesTo(List.of("Invalid"));
     EdmTerm localTerm = new EdmTermImpl(mock(Edm.class), "namespace", csdlTerm);
 
     try {
