@@ -15,16 +15,19 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Improved test assertions; Replaced Arrays.asList with List.of
  */
 package org.sitenetsoft.olinguito.server.core.uri.queryoption.expression;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.sitenetsoft.olinguito.commons.api.edm.Edm;
 import org.sitenetsoft.olinguito.commons.api.edm.EdmAction;
@@ -58,13 +61,13 @@ public class ExpressionTest {
   @Test
   public void supportedOperators() {
     assertEquals(UnaryOperatorKind.MINUS, UnaryOperatorKind.get("-"));
-    assertEquals(null, UnaryOperatorKind.get("XXX"));
+    assertNull(UnaryOperatorKind.get("XXX"));
 
     assertEquals(BinaryOperatorKind.MOD, BinaryOperatorKind.get("mod"));
-    assertEquals(null, BinaryOperatorKind.get("XXX"));
+    assertNull(BinaryOperatorKind.get("XXX"));
 
     assertEquals(MethodKind.CONCAT, MethodKind.get("concat"));
-    assertEquals(null, MethodKind.get("XXX"));
+    assertNull(MethodKind.get("XXX"));
   }
 
   @Test
@@ -98,7 +101,7 @@ public class ExpressionTest {
   public void enumerationExpression() throws Exception {
     EdmEnumType type = edm.getEnumType(EnumTypeProvider.nameENString);
     assertNotNull(type);
-    EnumerationImpl expression = new EnumerationImpl(type, Arrays.asList("String1", "String2"));
+    EnumerationImpl expression = new EnumerationImpl(type, List.of("String1", "String2"));
     assertEquals(type, expression.getType());
     assertEquals("String1", expression.getValues().get(0));
     assertEquals("String2", expression.getValues().get(1));
@@ -164,7 +167,7 @@ public class ExpressionTest {
 
     // UriResourceImplKeyPred typeFilter on entry
     EdmEntityType entityBaseType = edm.getEntityType(EntityTypeProvider.nameETBaseTwoKeyNav);
-    function = edm.getUnboundFunction(FunctionProvider.nameUFCRTCollETTwoKeyNavParam, Arrays.asList("ParameterInt16"));
+    function = edm.getUnboundFunction(FunctionProvider.nameUFCRTCollETTwoKeyNavParam, List.of("ParameterInt16"));
     expression = new MemberImpl(new UriInfoImpl().setKind(UriInfoKind.resource).addResourcePart(
         new UriResourceFunctionImpl(null, function, null).setEntryTypeFilter(entityBaseType))
         .asUriInfoResource(),
@@ -173,7 +176,7 @@ public class ExpressionTest {
 
     // UriResourceImplKeyPred typeFilter on entry
     entityBaseType = edm.getEntityType(EntityTypeProvider.nameETBaseTwoKeyNav);
-    function = edm.getUnboundFunction(FunctionProvider.nameUFCRTCollETTwoKeyNavParam, Arrays.asList("ParameterInt16"));
+    function = edm.getUnboundFunction(FunctionProvider.nameUFCRTCollETTwoKeyNavParam, List.of("ParameterInt16"));
     expression = new MemberImpl(new UriInfoImpl().setKind(UriInfoKind.resource).addResourcePart(
         new UriResourceFunctionImpl(null, function, null).setCollectionTypeFilter(entityBaseType))
         .asUriInfoResource(),
@@ -182,9 +185,9 @@ public class ExpressionTest {
 
     // no typed
     entityBaseType = edm.getEntityType(EntityTypeProvider.nameETBaseTwoKeyNav);
-    function = edm.getUnboundFunction(FunctionProvider.nameUFCRTCollETTwoKeyNavParam, Arrays.asList("ParameterInt16"));
+    function = edm.getUnboundFunction(FunctionProvider.nameUFCRTCollETTwoKeyNavParam, List.of("ParameterInt16"));
     expression = new MemberImpl(new UriInfoImpl().setKind(UriInfoKind.all), null);
-    assertEquals(null, expression.getType());
+    assertNull(expression.getType());
 
     // no typed collection else case
     assertFalse(expression.isCollection());
@@ -194,7 +197,7 @@ public class ExpressionTest {
   public void methodCallExpression() throws Exception {
     Expression p0 = new LiteralImpl("'A'", odata.createPrimitiveTypeInstance(EdmPrimitiveTypeKind.String));
     Expression p1 = new LiteralImpl("'B'", odata.createPrimitiveTypeInstance(EdmPrimitiveTypeKind.String));
-    MethodImpl expression = new MethodImpl(MethodKind.CONCAT, Arrays.asList(p0, p1));
+    MethodImpl expression = new MethodImpl(MethodKind.CONCAT, List.of(p0, p1));
 
     assertEquals(MethodKind.CONCAT, expression.getMethod());
     assertEquals("<concat(<'A'>,<'B'>)>", expression.accept(new FilterTreeToText()));
